--- a/provision_vms_ec2_instance.yml
+++ b/provision_vms_ec2_instance.yml
@@ -54,16 +54,16 @@
     with_items: "{{ vmcreate.results }}"
     ignore_errors: true
 
-  - name: Create a dictionary of all of the server names and their instance_ids
-    set_fact:
-     server_names: "{{ (server_names | default({})) | combine({ vmcreate.item.public_dns_name: vmcreate.item.instance_ids[0] }) }}"
-    loop: "{{ ec2_jobs.results }}"
-    loop_control:
-      loop_var: ec2_instance
+#  - name: Create a dictionary of all of the server names and their instance_ids
+#    set_fact:
+#     server_names: "{{ (server_names | default({})) | combine({ vmcreate.item.public_dns_name: vmcreate.item.instance_ids[0] }) }}"
+#    loop: "{{ ec2_jobs.results }}"
+#    loop_control:
+#      loop_var: ec2_instance
 
   - name: Setup in-memory inventory
     add_host:
-      hostname: "{{ item.public_dns_name }}"
+      hostname: "{{ ec2.instances[0].public_dns_name }}"
       groups: just_created_vms
     with_items: "{{ ec2_jobs }}"
 
