--- a/provision_vms_ec2_instance.yml
+++ b/provision_vms_ec2_instance.yml
@@ -63,7 +63,7 @@
 
   - name: Setup in-memory inventory
     add_host:
-      hostname: "{{ ec2_instances[0].public_dns_name }}"
+      hostname: "{{ ec2_jobs[0].public_dns_name }}"
       groups: just_created_vms
     with_items: "{{ ec2_jobs }}"
 
