--- a/provision_vms_ec2_instance.yml
+++ b/provision_vms_ec2_instance.yml
@@ -63,9 +63,10 @@
 
   - name: Setup in-memory inventory
     add_host:
-      hostname: "{{ vmcreate.public_ip }}"
+      name: "{{ item.public_dns_name }}"
       groups: just_created_vms
-    with_items: "{{ ec2_jobs }}"
+    with_sequence: start=1 end={{num_vm|int}}
+#    with_items: "{{ ec2_jobs }}"
 
 - name: "[Play 2] Post Configuration of VM"
   hosts: just_created_vms
