--- a/provision_vms_ec2_instance.yml
+++ b/provision_vms_ec2_instance.yml
@@ -63,7 +63,7 @@
 
   - name: Setup in-memory inventory
     add_host:
-      name: "{{ ec2_jobs.public_dns_name }}"
+      name: "{{ ec2_jobs.item[0].public_dns_name }}"
       groups: just_created_vms
     with_sequence: start=1 end={{num_vm|int}}
 #    with_items: "{{ ec2_jobs }}"
