--- a/provision_vms_ec2_instance.yml
+++ b/provision_vms_ec2_instance.yml
@@ -54,6 +54,7 @@
     with_items: "{{ vmcreate.results }}"
     ignore_errors: true
 
+Under construction
 #  - name: Create a dictionary of all of the server names and their instance_ids
 #    set_fact:
 #     server_names: "{{ (server_names | default({})) | combine({ vmcreate.item.public_dns_name: vmcreate.item.instance_ids[0] }) }}"
@@ -61,11 +62,10 @@
 #    loop_control:
 #      loop_var: ec2_instance
 
-  - name: Setup in-memory inventory
-    add_host:
-      name: "{{ ec2_jobs.item[0].public_dns_name }}"
-      groups: just_created_vms
-    with_sequence: start=1 end={{num_vm|int}}
+#  - name: Setup in-memory inventory
+#    add_host:
+#      name: "{{ ec2_jobs.public_dns_name }}"
+#      groups: just_created_vms
 #    with_items: "{{ ec2_jobs }}"
 
 - name: "[Play 2] Post Configuration of VM"
